<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data android:layout_height="match_parent">

        <import type="android.widget.AutoCompleteTextView"
alias="autoTextView"/>
        <variable
            name="bankAccount"
            type="com.bankapp.databinding.Account" />

        <import
            alias="string"
            type="java.lang.String" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/update_user_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ProgressBar
                android:id="@+id/load_update_user_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/update_account_no_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/account_number_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/material_on_background_emphasis_medium"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_name_textLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/update_account_no_label"
                app:layout_constraintTop_toBottomOf="@+id/update_account_no_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:minEms="15"
                    android:text="@{bankAccount.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_account_type_textLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/account_type"
                app:layout_constraintEnd_toEndOf="@+id/update_name_textLayout"
                app:layout_constraintStart_toStartOf="@+id/update_name_textLayout"
                app:layout_constraintTop_toBottomOf="@+id/update_name_textLayout">

                <AutoCompleteTextView
                    android:id="@+id/update_account_type_autocompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="0"
                    android:inputType="none"
                    android:minEms="15"
                    android:text="@{bankAccount.acctType}"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_balance_textLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/balance"
                app:layout_constraintEnd_toEndOf="@+id/update_account_type_textLayout"
                app:layout_constraintStart_toStartOf="@+id/update_account_type_textLayout"
                app:layout_constraintTop_toBottomOf="@+id/update_account_type_textLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_balance_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minEms="15"
                    android:text="@{string.valueOf(bankAccount.balance)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/update_name_textLayout"
                app:layout_constraintStart_toStartOf="@+id/update_balance_textLayout"
                app:layout_constraintTop_toBottomOf="@+id/update_balance_textLayout" />

            <TextView
                android:id="@+id/update_account_no_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{bankAccount.accountNo}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/update_account_no_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/update_account_no_label"
                app:layout_constraintTop_toTopOf="@+id/update_account_no_label" />

            <ProgressBar
                android:id="@+id/update_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/update_updateButton"
                app:layout_constraintEnd_toEndOf="@+id/update_updateButton"
                app:layout_constraintStart_toStartOf="@+id/update_updateButton"
                app:layout_constraintTop_toTopOf="@+id/update_updateButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>